<resources>
    <string name="app_name">截图装B神器</string>
    <string name="title">选择红包类型</string>
    <string name="countermand">取消</string>
    <string name="title_wxred_packet">微信红包</string>
    <string name="ender">发送人</string>
    <string name="name">小小</string>
    <string name="wx_information">恭喜发财，大吉大利！</string>
    <string name="money">红包金额(元)</string>
    <string name="make_preview">生成预览</string>
    <string name="confirm">确定</string>
    <string name="qq_back">返回</string>
    <string name="avatar">角色头像</string>
    <string name="strUserId">角色名字</string>
    <string name="randomheard">头像随机</string>
    <string name="randomname">名字随机</string>
    <string name="wx_red_envelope">红包详情</string>
    <string name="Inform_sec_pay">信息安全支付</string>
    <string name="wx_yuan">元</string>
    <string name="save">已存入零钱，可直接提现</string>
    <string name="leave_word">留言</string>
    <string name="red_envelope">查看我的红包记录</string>
    <string name="WX_save_moey">收到的钱可直接用来发红包</string>
    <string name="zfb_information">恭喜发财，完事如意！</string>
    <string name="zfb_save">已存入余额</string>
    <string name="zfb_leave_word">答谢</string>
    <string name="zfb_red_envelope">我要发红包</string>
    <string name="zfb_red_enve">支付宝红包</string>
    <string name="zfb_send_redbag">发红包人</string>
    <string name="zfb_receive_redbage">领红包人</string>
    <string name="zfb_get_time">领取时间</string>
    <string name="qq_redbag">QQ红包</string>
    <string name="qq_record">红包记录</string>info
    <string name="qq_commonabc">共%1$s元</string>
    <string name="qq_common1">%1$s元</string>
    <string name="qq_info">来自%1$s</string>
    <string name="qq_information">恭喜发财</string>
    <string name="qq_finish">已领取1/1个</string>
    <string name="qq_deposited">收到的红包已存入</string>
    <string name="qq_balance">余额</string>
    <string name="chat_messages">设置聊天信息</string>
    <string name="addspeak">增加对话</string>
    <string name="delete">删除</string>
    <string name="wx_text">文本</string>
    <string name="picture">图片</string>
    <string name="add_text">增加文本消息</string>
    <string name="messages_time">消息时间(选填)</string>
    <string name="my">自己</string>
    <string name="you">对方</string>
    <string name="set_the_chat_bg">设置聊天背景</string>
    <string name="add_chati_gongbao">增加红包消息</string>
    <string name="receive_hongbao">已领取红包</string>
    <string name="see_envelope">查看红包</string>
    <string name="wechatpay">微信红包</string>
    <string name="change_the_amount">零钱金额（元）</string>
    <string name="loose_change">零钱</string>
    <string name="wx_secure_payment">微信安全支付</string>
    <string name="change_detail">零钱明细</string>
    <string name="bancktyoe">%1$s 尾号%2$s</string>
    <string name="balance">已转入%1$s的余额</string>
</resources>
