<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
<RelativeLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1">

    <ImageView
        android:background="@drawable/red_wechat_red_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ImageView>
    <ImageButton
        android:paddingTop="7dp"
        android:paddingLeft="18dp"
        android:background="@color/colorTransparent"
        android:src="@drawable/ibtn_wx_ed_wechat_red_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_alignParentStart="true"/>
    <TextView
        android:layout_marginTop="4dp"
        android:layout_marginLeft="11dp"
        android:textColor="@color/colorBack_yellow"
        android:textSize="18sp"
        android:text="@string/wx_red_envelope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageButton"
        android:layout_toEndOf="@+id/imageButton"
        android:id="@+id/textView"/>
    <TextView

        android:includeFontPadding ="false"
        android:paddingTop="0dp"
        android:textColor="@color/colorBack_yellow"
        android:textSize="13sp"
        android:text="@string/Inform_sec_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/wx_img_head_circle"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:src="@drawable/img_10000"
        android:layout_marginTop="88dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tvwx_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:layout_marginTop="7dp"
        android:background="@null"
        android:text="@string/name"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv_wx_information"
        android:textSize="14sp"
        android:layout_marginTop="3.5dp"
        android:gravity="center"
        android:text="@string/wx_information"
        android:textColor="@color/colorNum_Gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_marginTop="24.6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/tvwx_money"
            android:text="200"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="58sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:layout_marginTop="38dp"
            android:textSize="18sp"
            android:text="@string/wx_yuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_toEndOf="@+id/tvwx_money"/>

    </RelativeLayout>
    <TextView
        android:textSize="12sp"
        android:textColor="@color/colorLavender"
        android:gravity="center"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>

<RelativeLayout
    android:layout_marginTop="34dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="52dp">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#efe5e4"
        />
    <TextView
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center_vertical"
        android:textSize="17sp"
        android:text="@string/leave_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/colorWXbg_Gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginTop="30dp"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="center"
            android:textColor="@color/colorLavender"
            android:textSize="14sp"
            android:text="@string/red_envelope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <TextView
        android:textSize="12sp"
        android:textColor="@color/colorNum_Gray"
        android:layout_gravity="center"
        android:text="@string/WX_save_moey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>


</LinearLayout>
