<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="@color/colorGray"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <RelativeLayout
        android:background="@color/colorLight_blue"
        android:layout_width="match_parent"
        android:layout_height="44dp">
        <ImageButton
            android:background="@color/colorTransparent"
            android:src="@drawable/red_alipay_red_return"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:id="@+id/ibtn_break"/>
        <TextView
            android:id="@+id/titlename"
            android:textColor="@color/colorWhiter"
            android:textSize="18sp"
            android:text="@string/title_wxred_packet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/ibtn_break"
            android:layout_toEndOf="@+id/ibtn_break"/>

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/LL_information"
        android:background="@color/colorWhiter"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">
        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/ender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"/>
        m<TextView
            android:gravity="end"
            android:ellipsize="none"
            android:maxLines="2"
            android:scrollHorizontally="false"
            android:text="@string/name"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_name"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.98"/>
        <ImageView
            android:layout_margin="10dp"
            android:src="@drawable/img_10013"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:id="@+id/img_head"
            android:adjustViewBounds="false"/>
    </LinearLayout>
    <LinearLayout
        android:background="@color/colorWhiter"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/money"
            android:inputType="numberDecimal"
            android:layout_margin="15dp"
            android:hint="@string/money"
            android:background="@null"
            android:maxLength="8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <View
            android:layout_marginLeft="15dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray"
            />
        <EditText
            android:id="@+id/wx_information"
            android:inputType="text"
            android:layout_margin="15dp"
            android:hint="@string/wx_information"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <Button
        android:id="@+id/make_preview"
        android:enabled="false"
        android:layout_margin="20dp"
        android:background="@drawable/button"
        android:textColor="@color/colorBack_Gray"
        android:textSize="18sp"
        android:text="@string/make_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>
