<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <ImageView
            android:background="@drawable/red_zfb_red_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ImageView>
        <ImageButton
            android:paddingTop="16.5dp"
            android:paddingLeft="16.5dp"
            android:background="@color/colorTransparent"
            android:src="@drawable/zfb_red_alipay_red_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageButton"
            android:layout_alignParentStart="true"/>
        <TextView
            android:layout_marginTop="18dp"
            android:layout_marginLeft="11dp"
            android:textColor="@color/colorWhiter"
            android:textSize="15sp"
            android:text="@string/zfb_red_enve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/imageButton"
            android:layout_toEndOf="@+id/imageButton"
            android:id="@+id/textView"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/wx_img_head_circle"
            android:layout_width="83dp"
            android:layout_height="83dp"
            android:src="@drawable/img_10000"
            android:layout_marginTop="88dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvwx_name"
            android:textColor="#363636"
            android:textSize="22sp"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:text="@string/name"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_wx_information"
            android:textSize="14sp"
            android:gravity="center"
            android:text="@string/zfb_information"
            android:textColor="#cbcbcb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <RelativeLayout
            android:layout_marginTop="26.5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/tvwx_money"
                android:text="200"
                android:textColor="@color/zfb_num"
                android:textSize="48sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:layout_marginTop="30dp"
                android:textSize="14sp"
                android:text="@string/wx_yuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#060606"
                android:layout_toEndOf="@+id/tvwx_money"/>

        </RelativeLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:textSize="12sp"
            android:textColor="#cbcbcb"
            android:gravity="center"
            android:text="@string/zfb_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="21.5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="64.5dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#efe5e4"
            />
        <TextView
            android:textColor="@color/zfb_textx"
            android:gravity="center_vertical"
            android:textSize="15sp"
            android:text="@string/zfb_leave_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <LinearLayout
        android:gravity="bottom"
        android:orientation="vertical"
        android:background="@color/colorWXbg_Gray"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="35dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginTop="11dp"
                android:layout_marginBottom="11dp"
                android:layout_gravity="center"
                android:textColor="@color/zfb_textx"
                android:textSize="15sp"
                android:text="@string/zfb_red_envelope"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <TextView
            android:id="@+id/tv_tiemid"
            android:layout_marginBottom="15.5dp"
            android:textSize="12sp"
            android:lineSpacingMultiplier="0"
            android:textColor="#c6c6c6"
            android:layout_gravity="center"
            android:text="@string/WX_save_moey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</LinearLayout>
