<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:background="@color/colorGray"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
<RelativeLayout
    android:background="@color/qq_redbg"
    android:layout_width="match_parent"
    android:layout_height="48dp">
    <ImageButton
        android:layout_marginLeft="10dp"
        android:background="@color/transparent_background"
        android:layout_marginTop="9dp"
        android:src="@drawable/ic_qqhb_back_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton2"/>
    <TextView
        android:clickable="true"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorWhiter"
        android:textSize="16sp"
        android:text="@string/qq_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_back"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/imageButton2"/>
    <TextView
        android:textColor="@color/colorWhiter"
        android:textSize="18sp"
        android:text="@string/qq_redbag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_back"
        android:layout_alignBottom="@+id/tv_back"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:textColor="@color/colorWhiter"
        android:textSize="15sp"
        android:text="@string/qq_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv_back"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"/>

</RelativeLayout>
<RelativeLayout
    android:background="@color/qq_redbg"
    android:layout_width="match_parent"
    android:layout_height="129dp">
    <de.hdodenhof.circleimageview.CircleImageView
        tools:src="@drawable/img_10003"
        android:layout_width="67dp"
        android:layout_height="67dp"
        android:id="@+id/cview_big"
        android:layout_marginLeft="15dp"
        android:layout_alignTop="@+id/imageView4"
        android:layout_alignParentStart="true"/>
    <TextView

        android:layout_marginLeft="9dp"
        android:textSize="23sp"
        android:textColor="@color/qq_num"
        android:text="@string/qq_commonabc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cview_big"
        android:layout_toEndOf="@+id/cview_big"
        android:id="@+id/tv_num"/>
    <TextView
        android:text="@string/qq_info"
        android:textSize="16sp"
        android:textColor="@color/colorWhiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_num"
        android:layout_alignStart="@+id/tv_num"
        android:id="@+id/tv_aname"/>

    <TextView
        android:id="@+id/qq_gxfc"
        android:text="@string/qq_information"
        android:textSize="16sp"
        android:textColor="@color/colorWhiter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_aname"
        android:layout_alignStart="@+id/tv_aname"/>
    <ImageView
        android:src="@drawable/ic_qqhb_lsy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/imageView4"/>
    <ImageView
        android:layout_marginLeft="36sp"
        android:src="@drawable/ic_qqhb_lsx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>
<RelativeLayout
    android:background="@color/colorGray"
    android:layout_width="match_parent"
    android:layout_height="30sp">
    <TextView
        android:layout_marginStart="15dp"
        android:text="@string/qq_finish"
        android:textSize="13sp"
        android:textColor="@color/colorBack_Gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"/>
</RelativeLayout>
<RelativeLayout
    android:background="@color/colorWhiter"
    android:layout_width="match_parent"
    android:layout_height="73dp">
    <ImageView
        android:src="@drawable/ic_qqhb_ltb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"/>
    <de.hdodenhof.circleimageview.CircleImageView
        tools:src="@drawable/img_10006"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/imageView"
        android:id="@+id/cview_sm"/>
    <TextView
        android:layout_marginTop="16sp"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/name"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_toEndOf="@+id/cview_sm"
        android:id="@+id/tv_name1"/>
    <TextView
        android:paddingTop="6dp"
        tools:text="15:16:18"
        android:id="@+id/tv_time"
        android:textColor="@color/colorBack_Gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_name1"
        android:layout_alignStart="@+id/tv_name1"/>
    <TextView
        android:id="@+id/tv_num1"
        android:layout_marginRight="15dp"
        android:text="@string/qq_common1"
        android:textColor="@color/colorBack_Gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginStart="110dp"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:text="@string/qq_deposited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/textView7"/>
        <TextView
            android:textSize="15sp"
            android:textColor="@color/qq_redbg"
            android:text="@string/qq_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView7"
            android:layout_toEndOf="@+id/textView7"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44.5dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dedfe0"
                />
            <ImageView
                android:layout_marginStart="94dp"
                android:src="@drawable/ic_qqhb_lte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:id="@+id/imageView2"/>
            <ImageView
                android:src="@drawable/ic_qqhb_ltk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="121dp"
                android:id="@+id/imageView3"/>
            <TextView
                android:layout_marginLeft="5dp"
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/imageView2"
                android:id="@+id/textView8"/>
            <TextView
                android:layout_marginLeft="5dp"
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_alignBaseline="@+id/textView8"
                android:layout_alignBottom="@+id/textView8"
                android:layout_alignStart="@+id/imageView3"/>
        </RelativeLayout>

    </RelativeLayout>


</LinearLayout>
