<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorGray"
              android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/colorLight_blue">
        <ImageButton
            android:id="@+id/ibtn_break"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/colorTransparent"
            android:src="@drawable/red_alipay_red_return"/>
        <TextView
            android:id="@+id/titlename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/ibtn_break"
            android:layout_toRightOf="@+id/ibtn_break"
            android:text="@string/title_wxred_packet"
            android:textColor="@color/colorWhiter"
            android:textSize="18sp"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/adContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/LL_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorWhiter"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="@string/zfb_send_redbag"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.98"
            android:ellipsize="none"
            android:gravity="end"
            android:maxLines="2"
            android:scrollHorizontally="false"
            android:text="@string/name"
            android:textSize="18sp"/>
        <ImageView
            android:id="@+id/img_head"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:src="@drawable/img_10013"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LL_information1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorWhiter"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="@string/zfb_receive_redbage"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tv_name1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.98"
            android:ellipsize="none"
            android:gravity="end"
            android:maxLines="2"
            android:scrollHorizontally="false"
            android:text="@string/name"
            android:textSize="18sp"/>
        <ImageView
            android:id="@+id/img_head1"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:src="@drawable/img_10013"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorWhiter"
        android:orientation="vertical">

        <EditText
            android:id="@+id/money"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:background="@null"
            android:hint="@string/money"
            android:inputType="numberDecimal"
            android:maxLength="8"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:background="@color/colorGray"
        />
        <EditText
            android:id="@+id/wx_information"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:background="@null"
            android:hint="恭喜发财"
            android:inputType="text"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="18dp"
            android:background="@color/colorGray"
        />
        <RelativeLayout
            android:id="@+id/RL_changeTime"
            android:layout_width="match_parent"
            android:layout_height="55dp">
            <TextView
                android:id="@+id/gettime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/tv_time"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/tv_time"
                android:layout_marginStart="17dp"
                android:text="@string/zfb_get_time"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="27dp"
                android:gravity="end"
                tools:text="9:15:15"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tv_time"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="13dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/enter"/>

        </RelativeLayout>
    </LinearLayout>
    <Button
        android:id="@+id/make_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button"
        android:enabled="false"
        android:text="@string/make_preview"
        android:textColor="@color/colorBack_Gray"
        android:textSize="18sp"/>


</LinearLayout>
